repaired parameterized, fixed all old tests. no fully port to jdk11